keycloak/3-keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - keycloak.platform.labs.ahinh.me
      secretName: keycloak-cert-tls
  ingressClassName: nginx
  rules:
    - host: keycloak.platform.labs.ahinh.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
